# videotools

./: CMakeLists.txt  README.md  README.txt  main.cpp  makejsonsubtitle.py  mergeimagetovideo.cpp  videoSubRenderer.cpp
crop/: Makefile  README.md  main.cpp  mainwindow.cpp  mainwindow.h  qtcropvideo.pro  range_slider.h
transitionImageOpenCV/: CMakeLists.txt  README.md  genreadme.py  main.cpp  transition_cli.pro  transitions.cpp  transitions.h  video_producer.cpp  video_producer.h
